<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartCurrency"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/totalSupply"/>

    <ProgressBar
        android:id="@+id/progressChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="100dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/chartCurrency"
        app:layout_constraintTop_toBottomOf="@id/totalSupply" />

    <ImageView
        android:id="@+id/ivCurrencyDetailIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        tools:src="@drawable/bitcoin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>
    
    <TextView
        android:id="@+id/marketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_cap_rank_text"
        app:layout_constraintStart_toEndOf="@+id/ivCurrencyDetailIcon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"/>
    
    <TextView
        android:id="@+id/marketCapChange"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/mc_hange_in_24h_text"
        app:layout_constraintStart_toStartOf="@+id/marketCap"
        app:layout_constraintTop_toBottomOf="@+id/marketCap"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/ath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_time_high_ath_text"
        app:layout_constraintStart_toStartOf="@+id/marketCap"
        app:layout_constraintTop_toBottomOf="@+id/marketCapChange"
        android:layout_marginTop="2dp"/>
    
    <TextView
        android:id="@+id/athChangePercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ath_change_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@+id/ath"
        android:layout_marginTop="2dp"/>
    
    <TextView
        android:id="@+id/circulatingSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circulating_supply_text"
        app:layout_constraintTop_toBottomOf="@id/athChangePercentage"
        app:layout_constraintStart_toStartOf="@+id/marketCap"
        android:layout_marginTop="2dp"/>
    
    <TextView
        android:id="@+id/totalSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_supply_text"
        app:layout_constraintTop_toBottomOf="@+id/circulatingSupply"
        app:layout_constraintStart_toStartOf="@+id/marketCap"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/tvDetailMarketCapRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tvMarketCapChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tvDetailMarketCapRank"/>

    <TextView
        android:id="@+id/tvATH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/marketCapChange"/>

    <TextView
        android:id="@+id/tvAthChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tvATH"/>

    <TextView
        android:id="@+id/tvCirculatingSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tvAthChange"/>

    <TextView
        android:id="@+id/tvTotalSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tvCirculatingSupply"/>

</androidx.constraintlayout.widget.ConstraintLayout>